--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "consign": "^0.1.6",
     "express": "^4.17.1",
-    "knex": "^0.19.4"
+    "knex": "^0.19.4",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
