--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "consign": "^0.1.6",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "knex": "^0.19.4",
-    "pg": "^7.12.1"
+    "body-parser": "1.19.0",
+    "consign": "0.1.6",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "knex": "0.19.4",
+    "pg": "7.12.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "eslint": "6.5.1",
+    "nodemon": "1.19.2"
   }
 }
