--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.19.0",
-    "draft-js": "^0.11.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.25",
+    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/react-fontawesome": "0.1.4",
+    "axios": "0.19.0",
+    "draft-js": "0.11.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-router-dom": "5.1.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
@@ -35,6 +35,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.5.1"
+    "eslint": "6.5.1"
   }
 }
