--- a/backend/.envfile
+++ b/backend/.envfile
@@ -5,7 +5,7 @@ module.exports = {
     db: {
         host : '127.0.0.1',
         port: 5432,
-        database: 'post',
+        database: '',
         user: '',
         password: ''
     }
